k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pal-tracker
  labels:
    app: pal-tracker 
spec:
  type: ClusterIP
  selector:
    app: pal-tracker
  ports:
  - port: 8080
    targetPort: 8080
